force-app/main/default/objects/Ministry_Group__c/Ministry_Group__c.object-meta.xml
<CustomObject>
    <label>Ministry Group</label>
    <nameField>
        <label>Ministry Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ministry Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>