force-app/main/default/objects/Ministry_Group__c/fields/Account_Event_Area__c.field-meta.xml
<CustomField>
    <fullName>Account_Event_Area__c</fullName>
    <formula>CASESAFEID( Group_Household__r.Event_Zip_Code_Look_Up__r.Event_Area_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Event Area</label>
    <type>Text</type>
</CustomField>