force-app/main/default/objects/Ministry_Group__c/fields/Active_Next_Event__c.field-meta.xml
<CustomField>
    <fullName>Active_Next_Event__c</fullName>
    <formula>IF(  Event_Area_Code__r.Territory_Next_Event_Date__c &lt;= End_Date__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Next Event</label>
    <type>Checkbox</type>
</CustomField>