force-app/main/default/objects/Ministry_Group__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Group_Coordinator__r.MailingStreet &amp; BR()
&amp; Group_Coordinator__r.MailingCity &amp; &quot; &quot; &amp;  Group_Coordinator__r.MailingState &amp; &quot;, &quot; &amp; Group_Coordinator__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>