force-app/main/default/objects/Ministry_Group__c/fields/All_Registrations__c.field-meta.xml
<CustomField>
    <fullName>All_Registrations__c</fullName>
    <inlineHelpText>Total number of registrations regardless of edibility  redeemed + eligible + ineligible</inlineHelpText>
    <label>All Registrations</label>
    <summarizedField>Ministry_Group_Registration__c.Qty_All__c</summarizedField>
    <summaryFilterItems>
        <field>Ministry_Group_Registration__c.Qty_All__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Ministry_Group_Registration__c.Ministry_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>