force-app/main/default/objects/Ministry_Group__c/fields/Church_Name__c.field-meta.xml
<CustomField>
    <fullName>Church_Name__c</fullName>
    <label>Church Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>