force-app/main/default/objects/Ministry_Group__c/fields/Church_State__c.field-meta.xml
<CustomField>
    <fullName>Church_State__c</fullName>
    <label>Church State</label>
    <type>TextArea</type>
</CustomField>