force-app/main/default/objects/Ministry_Group__c/fields/Coach_Email__c.field-meta.xml
<CustomField>
    <fullName>Coach_Email__c</fullName>
    <formula>Group_Coach__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coach Email</label>
    <type>Text</type>
</CustomField>