force-app/main/default/objects/Ministry_Group__c/fields/Coach_Phone__c.field-meta.xml
<CustomField>
    <fullName>Coach_Phone__c</fullName>
    <formula>Group_Coach__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coach Phone</label>
    <type>Text</type>
</CustomField>