force-app/main/default/objects/Ministry_Group__c/fields/Contact_is_GC__c.field-meta.xml
<CustomField>
    <fullName>Contact_is_GC__c</fullName>
    <formula>Group_Coordinator__r.Is_Group_Leader__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact is GC</label>
    <type>Checkbox</type>
</CustomField>