force-app/main/default/objects/Ministry_Group__c/fields/Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Coordinator__c</fullName>
    <formula>TEXT(Group_Coordinator__r.Salutation) &amp; &quot; &quot; &amp;Group_Coordinator__r.FirstName &amp; &quot; &quot; &amp; Group_Coordinator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordinator</label>
    <type>Text</type>
</CustomField>