force-app/main/default/objects/Ministry_Group__c/fields/Couples_Earned__c.field-meta.xml
<CustomField>
    <fullName>Couples_Earned__c</fullName>
    <formula>Couples_Eligible__c + Couples_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Couples Earned = Couples Eligible + Couples Earned  You can also get to this number by taking All Registrations - Ineligible / 10 rounded down to the nearest 10</inlineHelpText>
    <label>Couples Earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>