force-app/main/default/objects/Ministry_Group__c/fields/Couples_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Couples_Eligible__c</fullName>
    <formula>Floor(Eligible_Registrations__c/10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Eligible Registrations divided by 10 equals Couples Eligible. Remainder equals Progress.</inlineHelpText>
    <label>Free Couple Registrations Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>