force-app/main/default/objects/Ministry_Group__c/fields/Couples_Needed__c.field-meta.xml
<CustomField>
    <fullName>Couples_Needed__c</fullName>
    <formula>CEILING(Needed__c/2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Needed registrations / 2 rounded up . this is used to drive the progress bar on the community
It Represents the number of paid couples that still need to register with the group name to reach the next eligible couple</inlineHelpText>
    <label>Couples Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>