force-app/main/default/objects/Ministry_Group__c/fields/Couples_Progress__c.field-meta.xml
<CustomField>
    <fullName>Couples_Progress__c</fullName>
    <formula>Floor(Progress__c/2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Progress / 2 rounded down . this is used to drive the progress bar on the community
It Represents the number of paid couples earned towards the next eligible couple.</inlineHelpText>
    <label>Couples Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>