force-app/main/default/objects/Ministry_Group__c/fields/Couples_Used__c.field-meta.xml
<CustomField>
    <fullName>Couples_Used__c</fullName>
    <formula>Floor( Redeemed_Registrations__c /10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Redeemed Registrations divided by 10 equals Couples Used</inlineHelpText>
    <label>Free Couples Registrations Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>