force-app/main/default/objects/Ministry_Group__c/fields/Create_User__c.field-meta.xml
<CustomField>
    <fullName>Create_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create User</label>
    <type>Checkbox</type>
</CustomField>