force-app/main/default/objects/Ministry_Group__c/fields/Current_FY_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Current_FY_Registrations__c</fullName>
    <label>Current FY Registrations</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>