force-app/main/default/objects/Ministry_Group__c/fields/CY_Registrations__c.field-meta.xml
<CustomField>
    <fullName>CY_Registrations__c</fullName>
    <label>CY Registrations</label>
    <summaryFilterItems>
        <field>Ministry_Group_Registration__c.Registration_Date__c</field>
        <operation>lessThan</operation>
        <value>1/1/2026</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Ministry_Group_Registration__c.Registration_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2025</value>
    </summaryFilterItems>
    <summaryForeignKey>Ministry_Group_Registration__c.Ministry_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>