force-app/main/default/objects/Ministry_Group__c/fields/Days_until_Ministry_Group_Expires__c.field-meta.xml
<CustomField>
    <fullName>Days_until_Ministry_Group_Expires__c</fullName>
    <formula>End_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days until Ministry Group Expires</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>