force-app/main/default/objects/Ministry_Group__c/fields/Eligible_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Registrations__c</fullName>
    <inlineHelpText>Individual Registrations that were paid registrations, not used or redeemed.</inlineHelpText>
    <label>Eligible Registrations</label>
    <summarizedField>Ministry_Group_Registration__c.Qty_Eligible__c</summarizedField>
    <summaryFilterItems>
        <field>Ministry_Group_Registration__c.Qty_Eligible__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Ministry_Group_Registration__c.Ministry_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>