force-app/main/default/objects/Ministry_Group__c/fields/Event_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Area_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Area Code</label>
    <referenceTo>Event_Area_Code__c</referenceTo>
    <relationshipName>Loyalty_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>