force-app/main/default/objects/Ministry_Group__c/fields/Event_Area_Match__c.field-meta.xml
<CustomField>
    <fullName>Event_Area_Match__c</fullName>
    <formula>Group_Household__r.Event_Zip_Code_Look_Up__r.Event_Area_Code__r.Id = Event_Area_Code__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Area Match</label>
    <type>Checkbox</type>
</CustomField>