force-app/main/default/objects/Ministry_Group__c/fields/Event_Territory__c.field-meta.xml
<CustomField>
    <fullName>Event_Territory__c</fullName>
    <label>Event Territory</label>
    <length>20</length>
    <type>Text</type>
</CustomField>