force-app/main/default/objects/Ministry_Group__c/fields/Group_Coach__c.field-meta.xml
<CustomField>
    <fullName>Group_Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Coach</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Coached_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>