force-app/main/default/objects/Ministry_Group__c/fields/Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Group_Code__c</fullName>
    <label>Group Code</label>
    <type>TextArea</type>
</CustomField>