force-app/main/default/objects/Ministry_Group__c/fields/Group_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Code_Name__c</fullName>
    <label>Group Code Name</label>
    <type>TextArea</type>
</CustomField>