force-app/main/default/objects/Ministry_Group__c/fields/Group_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Group_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Coordinator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Loyalty_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>