force-app/main/default/objects/Ministry_Group__c/fields/Group_Coordinator_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Coordinator_Last_Name__c</fullName>
    <label>Group Coordinator Last Name</label>
    <type>TextArea</type>
</CustomField>