force-app/main/default/objects/Ministry_Group__c/fields/Group_Email__c.field-meta.xml
<CustomField>
    <fullName>Group_Email__c</fullName>
    <label>Group Email</label>
    <type>Email</type>
</CustomField>