force-app/main/default/objects/Ministry_Group__c/fields/Group_Household__c.field-meta.xml
<CustomField>
    <fullName>Group_Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Loyalty_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>