force-app/main/default/objects/Ministry_Group__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <formula>Small_Group__c +Invite_Others__c + Local_Impact__c + Salvation__c + Recommitment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Impact based invite others + Local Impact + Small Group + Recommitment + Salvation
This is modern data and was not capture reliably before Cvent</inlineHelpText>
    <label>Impact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>