force-app/main/default/objects/Ministry_Group__c/fields/Ineligible_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Ineligible_Registrations__c</fullName>
    <inlineHelpText>Free Registrations that are not eligible for use.</inlineHelpText>
    <label>Ineligible Registrations</label>
    <summarizedField>Ministry_Group_Registration__c.Qty_Ineligible__c</summarizedField>
    <summaryFilterItems>
        <field>Ministry_Group_Registration__c.Qty_Ineligible__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Ministry_Group_Registration__c.Ministry_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>