force-app/main/default/objects/Ministry_Group__c/fields/Invite_Others__c.field-meta.xml
<CustomField>
    <fullName>Invite_Others__c</fullName>
    <description>Roll up of Registrations where Invite others was indicated on a survey</description>
    <inlineHelpText>Roll up of Registrations where Invite others was indicated on a survey</inlineHelpText>
    <label>Invite Others</label>
    <summaryFilterItems>
        <field>Ministry_Group_Registration__c.Invite__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Ministry_Group_Registration__c.Ministry_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>