force-app/main/default/objects/Ministry_Group__c/fields/Local_Impact__c.field-meta.xml
<CustomField>
    <fullName>Local_Impact__c</fullName>
    <description>Roll up of Registrations where Impact Local was indicated on a survey</description>
    <inlineHelpText>Roll up of Registrations where Impact Local was indicated on a survey</inlineHelpText>
    <label>Local Impact</label>
    <summaryFilterItems>
        <field>Ministry_Group_Registration__c.Impact_Local__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Ministry_Group_Registration__c.Ministry_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>