force-app/main/default/objects/Ministry_Group__c/fields/MDM_Id__c.field-meta.xml
<CustomField>
    <fullName>MDM_Id__c</fullName>
    <label>MDM Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>