force-app/main/default/objects/Ministry_Group__c/fields/migrate_eligible__c.field-meta.xml
<CustomField>
    <fullName>migrate_eligible__c</fullName>
    <defaultValue>0</defaultValue>
    <description>this field is to help with migration and can be removed after go live</description>
    <label>_migrate_eligible</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>