force-app/main/default/objects/Ministry_Group__c/fields/migration_groupnamesId__c.field-meta.xml
<CustomField>
    <fullName>migration_groupnamesId__c</fullName>
    <label>_migration_groupnamesId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>