force-app/main/default/objects/Ministry_Group__c/fields/Ministry_Rep__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ministry Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loyalty_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>