force-app/main/default/objects/Ministry_Group__c/fields/Ministry_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Rep_Email__c</fullName>
    <formula>Event_Area_Code__r.Ministry_Rep_A__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ministry Rep Email</label>
    <type>Text</type>
</CustomField>