force-app/main/default/objects/Ministry_Group__c/fields/Ministry_Rep_Id__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Rep_Id__c</fullName>
    <formula>CASESAFEID(Event_Area_Code__r.Ministry_Rep__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ministry Rep Id</label>
    <type>Text</type>
</CustomField>