force-app/main/default/objects/Ministry_Group__c/fields/Ministry_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Rep_Name__c</fullName>
    <formula>Event_Area_Code__r.Ministry_Rep_A__r.FirstName  &amp; &quot; &quot; &amp; Event_Area_Code__r.Ministry_Rep_A__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ministry Rep Name</label>
    <type>Text</type>
</CustomField>