force-app/main/default/objects/Ministry_Group__c/fields/MR_Match__c.field-meta.xml
<CustomField>
    <fullName>MR_Match__c</fullName>
    <formula>AND(
Event_Area_Code__c!= NULL, 
CASESAFEID(Event_Area_Code__r.Ministry_Rep__c)=CASESAFEID(Ministry_Rep__r.Id)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MR Match</label>
    <type>Checkbox</type>
</CustomField>