force-app/main/default/objects/Ministry_Group__c/fields/Needed__c.field-meta.xml
<CustomField>
    <fullName>Needed__c</fullName>
    <formula>IF(10 - (Eligible_Registrations__c -(Couples_Eligible__c *10)) &gt;0,10 - (Eligible_Registrations__c -(Couples_Eligible__c *10)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Needed registrations to get the next Couples Eligible 10-Progress</inlineHelpText>
    <label>Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>