force-app/main/default/objects/Ministry_Group__c/fields/Next_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Event_Date__c</fullName>
    <formula>Event_Area_Code__r.Territory_Next_Event_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Event Date</label>
    <type>Date</type>
</CustomField>