force-app/main/default/objects/Ministry_Group__c/fields/Next_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Next_Event_Name__c</fullName>
    <formula>Event_Area_Code__r.Next_Event_Name__c</formula>
    <label>Next Event Name</label>
    <type>Text</type>
</CustomField>