force-app/main/default/objects/Ministry_Group__c/fields/PermissionSet__c.field-meta.xml
<CustomField>
    <fullName>PermissionSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permission Set</label>
    <type>Checkbox</type>
</CustomField>