force-app/main/default/objects/Ministry_Group__c/fields/Primary_Church__c.field-meta.xml
<CustomField>
    <fullName>Primary_Church__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Church</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Id</field>
            <operation>equals</operation>
            <value>012i0000000xEz5AAE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Loyalty_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>