force-app/main/default/objects/Ministry_Group__c/fields/Process_Text__c.field-meta.xml
<CustomField>
    <fullName>Process_Text__c</fullName>
    <label>Process Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>