force-app/main/default/objects/Ministry_Group__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <description>Confines eligible count from 1-10 for the progress bar LWC in the community</description>
    <formula>10 -   Needed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Eligible Registrations earned towards the next Couples Registration Eligible Registrations - Couple&apos;s Eligible * 10</inlineHelpText>
    <label>Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>