force-app/main/default/objects/Ministry_Group__c/fields/Redeem_Status__c.field-meta.xml
<CustomField>
    <fullName>Redeem_Status__c</fullName>
    <formula>IF(Eligible_Registrations__c &gt; 9, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Redeem Status</label>
    <type>Checkbox</type>
</CustomField>