force-app/main/default/objects/Ministry_Group__c/fields/Redeemed_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Redeemed_Registrations__c</fullName>
    <inlineHelpText>All Eligible Registrations that have been redeemed for a free weekend</inlineHelpText>
    <label>Redeemed Registrations</label>
    <summarizedField>Ministry_Group_Registration__c.Qty_Used__c</summarizedField>
    <summaryFilterItems>
        <field>Ministry_Group_Registration__c.Qty_Used__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Ministry_Group_Registration__c.Ministry_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>