force-app/main/default/objects/Ministry_Group__c/fields/Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Date__c</fullName>
    <description>Date reminder was sent.</description>
    <label>Reminder Date</label>
    <type>Date</type>
</CustomField>