force-app/main/default/objects/Ministry_Group__c/fields/Renew_Date__c.field-meta.xml
<CustomField>
    <fullName>Renew_Date__c</fullName>
    <label>Renew Date</label>
    <type>Date</type>
</CustomField>