force-app/main/default/objects/Ministry_Group__c/fields/Renew_Notification__c.field-meta.xml
<CustomField>
    <fullName>Renew_Notification__c</fullName>
    <formula>IF(End_Date__c &lt; TODAY() + 15, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renew Notification</label>
    <type>Checkbox</type>
</CustomField>