force-app/main/default/objects/Ministry_Group__c/fields/Renew_Notify_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Renew_Notify_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renew Notify Trigger</label>
    <type>Checkbox</type>
</CustomField>