force-app/main/default/objects/Ministry_Group__c/fields/Salvation__c.field-meta.xml
<CustomField>
    <fullName>Salvation__c</fullName>
    <description>Roll up of Registrations where Salvation was indicated on a survey</description>
    <inlineHelpText>Roll up of Registrations where Salvation was indicated on a survey</inlineHelpText>
    <label>Salvation</label>
    <summaryFilterItems>
        <field>Ministry_Group_Registration__c.Salvation__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Ministry_Group_Registration__c.Ministry_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>