force-app/main/default/objects/Ministry_Group__c/fields/SE_ID__c.field-meta.xml
<CustomField>
    <fullName>SE_ID__c</fullName>
    <label>SE ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>