force-app/main/default/objects/Ministry_Group__c/fields/Security_Token__c.field-meta.xml
<CustomField>
    <fullName>Security_Token__c</fullName>
    <formula>SUBSTITUTE( Left(  Name  ,1)&amp;Left( Name,1)&amp;RIGHT(TEXT(TIMENOW()),4)&amp;Right(  Group_Coordinator__c,4  ), &quot;.&quot;, &quot;X&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Security Token</label>
    <type>Text</type>
</CustomField>