force-app/main/default/objects/Ministry_Group__c/listViews/Active_for_Next_Event.listView-meta.xml
<ListView>
    <fullName>Active_for_Next_Event</fullName>
    <columns>NAME</columns>
    <columns>Active_Next_Event__c</columns>
    <columns>Next_Event_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Event_Area_Code__c</columns>
    <columns>Group_Coordinator__c</columns>
    <columns>Group_Household__c</columns>
    <columns>All_Registrations__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Ministry_Rep__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active_Next_Event__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active for Next Event</label>
</ListView>