force-app/main/default/objects/Ministry_Group__c/listViews/Active_Misaligned_Event_Area.listView-meta.xml
<ListView>
    <fullName>Active_Misaligned_Event_Area</fullName>
    <columns>NAME</columns>
    <columns>End_Date__c</columns>
    <columns>Event_Area_Code__c</columns>
    <columns>Group_Coordinator__c</columns>
    <columns>Group_Household__c</columns>
    <columns>All_Registrations__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Ministry_Rep__c</columns>
    <columns>Account_Event_Area__c</columns>
    <columns>Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Event_Area_Match__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Active Misaligned Event Area</label>
</ListView>