force-app/main/default/objects/Ministry_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Event_Area_Code__c</columns>
    <columns>External_Id__c</columns>
    <columns>Group_Coordinator__c</columns>
    <columns>Group_Household__c</columns>
    <columns>All_Registrations__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Ministry_Rep__c</columns>
    <columns>Primary_Church__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Redeem_Status__c</columns>
    <columns>Create_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>