force-app/main/default/objects/Ministry_Group__c/listViews/Area_Codes_and_Territory_Codes.listView-meta.xml
<ListView>
    <fullName>Area_Codes_and_Territory_Codes</fullName>
    <columns>NAME</columns>
    <columns>End_Date__c</columns>
    <columns>Event_Area_Code__c</columns>
    <columns>Event_Territory__c</columns>
    <columns>Group_Coordinator__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Ministry_Rep__c</columns>
    <columns>Status__c</columns>
    <columns>Process_Text__c</columns>
    <filterScope>Everything</filterScope>
    <label>Area Codes and Territory Codes</label>
</ListView>